--- a/index.html
+++ b/index.html
@@ -22,63 +22,200 @@
 </head>
 <body>
 
-    <div class="layout-container">
+    <div class="overflow-hidden layout-container">
 
-        <header class="pos-relative overflow-hidden t-align-center site-header">
-            <div class="media cover parallax">
-                <img class="lazyload" width="3200" height="2136" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="images/hero.jpg" alt="" />
+        <header class="pos-relative t-align-center site-header pseudo-before pattern-horizontal right bottom">
+            <div class="overflow-hidden cover">
+                <div class="media cover parallax">
+                    <img class="lazyload" width="3200" height="2136" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="images/hero.jpg" alt="" />
+                </div>
             </div>
-            <div class="d-flex direction-column jc-center ai-center cover fade-in">
+            <div class="d-flex direction-column jc-flex-start ai-center cover t-c-white fade-in t-shadow copy">
 
-                <img src="/images/logo.svg" alt="Ethic" class="logo" />
-
-                <h2 class="t-c-white h3">
-                    Equity  //  Trails  //  Health  //  Infrastructure  //  Community
-                </h2>
+                <strong>
+                    <em class="t-large">
+                        Bike NWA &amp; NWA Trailblazers are now
+                    </em>
+                </strong>
+                <h1>
+                    <img src="/images/logo.svg" alt="Ethic" class="logo" />
+                </h1>
+                <h4>
+                    Furthering Equity in Trails, Health, Infrastructure, and Community
+                </h4>
 
             </div>
         </header>
 
 
-        <div class="pos-relative overflow-hidden bg-grey hero">
+        <div class="container main-content">
 
-            <div class="media focus-middle-left parallax hide-large cover">
-                <img class="lazyload" data-sizes="auto" data-parent-fit="cover" width="2000" height="1334" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-srcset="/images/hero-portrait-500.jpg 500w, /images/hero-portrait-1000.jpg 1000w, /images/hero-portrait-1500.jpg 1500w, /images/hero-portrait-2000.jpg 2000w" alt="Rock climbing hanging onto an extreme ledge by just his hands" />
-            </div>
-            <div class="media parallax show-large cover">
-                <img class="lazyload" data-sizes="auto" data-parent-fit="cover" width="4000" height="2667" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-srcset="/images/hero-2000.jpg 2000w, /images/hero-4000.jpg 4000w" alt="Rock climbing hanging onto an extreme ledge by just his hands" />
+            <div class="grid-column-main inner-grid paragraph--image-aside-copy row-padding-top align--left row-gap-base pseudo-before pattern-vertical bottom extend">
+                <div class="row-padding fade-in copy">
+                    <h2 class="t-c-primary">
+                        New Name. <br />
+                        Expanded Vision.
+                    </h2>
+                    <p class="t-large">
+                        The merging of Bike NWA and NWATrailblazers into <strong>ETHIC</strong> establishes a single organization that upholds the goal of creating a world-class recreational and active transportation infrastructure network, while strengthening our focus on diversity, equity, and inclusion. Through programming and events that increase the diversity of our trails and of those accessing them, ETHIC empowers people to live active, healthy lives in their own community.
+                    </p>
+                    <p class="t-larger">
+                        Together, we can strengthen the foundations of <strong>Equity in Trails, Health, Infrastructure, and Community</strong> to improve the health and well being of our community.
+                    </p>
+                </div>
+                <div class="row-padding grid-offset-left pseudo-before image">
+                    <div class="cover pos-relative">
+                        <div class="media portrait">
+                            <img class="lazyload" width="3200" height="2136" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="images/hero.jpg" alt="" />
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <img src="/images/arrow.svg" class="pos-absolute fade-in arrow" alt="" />
+            <div class="container grid-main-full row-padding bg-grey pseudo-before pattern-horizontal right top">
+                <div class="grid-area-main inner-grid paragraph--single-column-copy ">
+                    <div class="content-container t-largest t-c-white t-align-center fade-in copy">
+                        <p>
+                            At <strong>ETHIC</strong>, our work is rooted in the belief that when people move their bodies, they are able to connect to the strength, dignity, and sense of belonging that reside within us all.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid-column-main inner-grid paragraph--image-aside-copy row-padding-bottom align--right row-gap-base pseudo-before pattern-vertical top">
+                <div class="row-padding fade-in copy">
+                    <div class="p-b-2 border-bottom">
+                        <p class="t-large">
+                            <strong>
+                                Our new site is coming soon. In the meantime, please visit Bike NWA and NWA Trailblazers to learn more.
+                            </strong>
+                        </p>
+                    </div>
+                    <div class="p-v-2 paragraph--logo-text border-bottom d-flex">
+                        <div class="m-b-base image">
+                            <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="images/logo-bike-nwa.svg" alt="Logo: Bike NWA" />
+                        </div>
+                        <div class="copy">
+                            <p>
+                                Learn more about Bike NWA’s vision for a safe, easy, and convenient multi-modal network that connects where people live, work, and play, along with their initiatives to promote advocacy and education in cities across Northwest Arkansas.
+                            </p>
+                            <p>
+                                <a class="link-arrow" target="_blank" href="https://www.bikenwa.org/">
+                                    Visit Site <span class="visually-hidden">: Bike NWA</span>
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="p-v-2 paragraph--logo-text border-bottom d-flex">
+                        <div class="m-b-base image">
+                            <img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="images/logo-nwa-trailblazers.svg" alt="Logo: NWA Trailblazers" />
+                        </div>
+                        <div class="copy">
+                            <p>
+                                Through the development of multi-use community trails for cycling, running, walking and discovering the beauty of Northwest Arkansas, NWA Trailblazers works to fulfill its mission of developing infrastructure that connects community and moves people.
+                            </p>
+                            <p>
+                                <a class="link-arrow" target="_blank" href="https://www.nwatrailblazers.com/">
+                                    Visit Site <span class="visually-hidden">: NWA Trailblazers</span>
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row-padding grid-offset-right pseudo-before image">
+                    <div class="cover pos-relative">
+                        <div class="media portrait">
+                            <img class="lazyload" width="3200" height="2136" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="images/hero.jpg" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container grid-main-full pos-relative pseudo-before pattern-horizontal left top">
+                <div class="media cover">
+                    <img class="lazyload" width="3200" height="2136" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="images/hero.jpg" alt="" />
+                </div>
+                <div class="grid-area-main inner-grid pos-relative paragraph--copy-over-image">
+                    <div class="row-padding t-c-white fade-in copy t-shadow">
+                        <span class="h2 d-block">
+                            New site coming
+                        </span>
+                        <span class="h1 d-block">
+                            September 2021
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid-column-main inner-grid paragraph--form row-padding pseudo-before pattern-vertical top extend">
+                <div class="fade-in content-container-offset-right copy">
+
+                    <h3>
+                        Join our mailing list to get the latest news on everything <strong>ETHIC</strong>.
+                    </h3>
+
+                    <form id="signup-form" action="/signup.php" method="post" class="d-flex flex-wrap jc-space-between">
+                        <div class="form-item">
+                            <label for="firstname" class="required">First Name</label>
+                            <input aria-label="First Name" id="firstname" name="firstname" required type="text">
+                        </div>
+                        <div class="form-item">
+                            <label for="lastname" class="required">Last Name</label>
+                            <input aria-label="Last Name" id="lastname" name="lastname" required type="text">
+                        </div>
+                        <div class="form-item type-email">
+                            <label for="email" class="required">Email </label>
+                            <input autocomplete="Email" aria-label="Email" id="email" maxlength="200" name="email" required type="email">
+                        </div>
+                        <div class="form-item form-actions">
+                            <button type="submit">Sign up</button>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
 
         </div>
 
 
-        <div class="bg-primary pos-relative container main-content">
+        <footer class="bg-grey-dark t-c-white container site-footer">
+            <div class="grid-area-main inner-grid">
 
+                <div class="content-container-offset-right copy">
 
-        </div>
+                    <div class="d-flex footer-top jc-space-between">
+                        <img src="/images/logo.svg" alt="Ethic" class="logo" />
+                        <ul class="reset d-flex m-t-base social">
+                            <li>
+                                <a href="mailto:" target="_blank">
+                                    <span class="visually-hidden">Email</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com" target="_blank">
+                                    <span class="visually-hidden">Facebook</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.instagram.com" target="_blank">
+                                    <span class="visually-hidden">Instagram</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
 
+                    <p>
+                        1000 SE 5th ST. Suite E, Bentonville, AR 72712, United States <br />
+                        ETHIC is a 501(c)(3) nonprofit. All monetary and in-kind donations are tax-deductible. Tax ID is 91-2038915.
+                    </p>
 
-        <div id="signup" class="bg-grey container row-padding bottom newsletter">
-            <div class="grid-area-main">
+                    <p class="copyright">
+                        &copy; 1999-2021 ETHIC All Rights Reserved.
+                    </p>
 
-
+                </div>
 
             </div>
-        </div>
-
-
-        <footer class="bg-grey container bottom footer">
-
-            <div class="grid-area-main">
-
-
-
-            </div>
-
-
-
         </footer>
 
 
