--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <meta property="og:title" content="" />
     <meta property="og:description" content="" />
     <meta property="og:image" content="" />
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#212121">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="msapplication-TileColor" content="#212121">
+    <meta name="msapplication-config" content="/browserconfig.xml">
+    <meta name="theme-color" content="#212121">
 
 </head>
 <body>
@@ -187,17 +197,17 @@
                         <img src="/images/logo.svg" alt="Ethic" class="logo" />
                         <ul class="reset d-flex m-t-base social">
                             <li>
-                                <a href="mailto:" target="_blank">
+                                <a href="mailto:info@bikenwa.org" target="_blank">
                                     <span class="visually-hidden">Email</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com" target="_blank">
+                                <a href="https://www.facebook.com/bikeozarks" target="_blank">
                                     <span class="visually-hidden">Facebook</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com" target="_blank">
+                                <a href="https://www.instagram.com/bikenwa/" target="_blank">
                                     <span class="visually-hidden">Instagram</span>
                                 </a>
                             </li>
