--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <meta property="og:title" content="" />
     <meta property="og:description" content="" />
     <meta property="og:image" content="" />
-    
+
+    <meta name="format-detection" content="telephone=no">
+
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -193,7 +195,7 @@
 
                 <div class="content-container-offset-right copy">
 
-                    <div class="d-flex footer-top jc-space-between">
+                    <div class="d-flex footer-top ai-center jc-space-between">
                         <img src="/images/logo.svg" alt="Ethic" class="logo" />
                         <ul class="reset d-flex m-t-base social">
                             <li>
